package com.pluralsight;

enum Size {
    SMALL,
    MEDIUM,
    LARGE
}
