package com.pluralsight;

public abstract class StoreItem implements Priceable{
}
